updated at: 2023-04-25 19:26, ハロウィン帽とパンプキンロッド - みみんくショップ - BOOTH

--- a/VRChat/63/1047263.html
+++ b/VRChat/63/1047263.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "A1fbwybnu2bT8DWPSzm5TXJE8hhXvwBoC0aRiXKPJ2I="></script>
+    "d6gmkOxNFO9Tm9tBaiqY5O252AMIjWInumm/MP+vaRQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ハロウィン帽とパンプキンロッド","description":"VRchatのアバター向けに作成したハロウィン感のあるカボチャモチーフの帽子とロッドです\n\nハロウィン帽子の方はポリゴン数789\nパンプキンロッドはポリゴン数537\n1マテリアル・1テクスチャです\nunitypackageとしてお配りします。\nロッドの方にはコウモリが出てくるエフェクトも付けているので、こちらもお試しください\n\n利用規約\nまた、MITライセンス・CC0 1.0とします。\n改変・有料配信・VRChatでの利用・同人ゲームへの組込みなども問題ありません。\nご自由にお使いください。\n\nシェーダーは、みに（@Mini_9321_VR）ちゃんのまんまるしぇーだーver 1.3 を使ってます","url":"https://booth.pm/ja/items/1047263","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8b6fede7-f411-4e95-9ac2-49e320f512a7/i/1047263/25174c50-deb8-44c1-9439-d21423537e80_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="A1fbwybnu2bT8DWPSzm5TXJE8hhXvwBoC0aRiXKPJ2I="></script>
+    nonce="d6gmkOxNFO9Tm9tBaiqY5O252AMIjWInumm/MP+vaRQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1047263/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               305
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1047263/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               305
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
