--- a/VRChat/26/1046626.html
+++ b/VRChat/26/1046626.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FUN8qBprpCbvlnzWVnVB9jftTkhKFmH1o5pf9DMg8f8="></script>
+    "7NbnqKxPdz/ofn1tOd7YHH+i+XFD8WTGfmGNYLQTrLw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"魔女帽子","description":"VRchatのアバター向けに作成した魔女っぽい先が折れたとんがり帽子です\n\nポリゴン数は761、unitypackageとしてお配りします。\nマテリアルやシェーダーも設定済み。\n頭のボーンにいれて位置とサイズを調整すれば\nそのままアップロードできるようにしています。\n\n利用規約\nまた、MITライセンス・CC0 1.0とします。\n改変・有料配信・VRChatでの利用・同人ゲームへの組込みなども問題ありません。\nご自由にお使いください。\n\nシェーダーはMToonを設定していますが、お好きなものをお使いください。\nOutlineの設定できるシェーダーだと、ふちが見えやすいかな？\n","url":"https://booth.pm/ja/items/1046626","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8b6fede7-f411-4e95-9ac2-49e320f512a7/i/1046626/e0bd3080-460f-4e5b-ae71-151f68390986_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FUN8qBprpCbvlnzWVnVB9jftTkhKFmH1o5pf9DMg8f8="></script>
+    nonce="7NbnqKxPdz/ofn1tOd7YHH+i+XFD8WTGfmGNYLQTrLw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1046626/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1046626/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
