updated at: 2023-04-25 19:27, ピクニックバスケット - ICNMY inst. - BOOTH

--- a/VRChat/30/1045630.html
+++ b/VRChat/30/1045630.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uOYekqFaDuc7T4nKS/zNF8r/o5AtKPtah9bCeoucV4o="></script>
+    "Uq7qXgb0kyrJ3UlC5eTNbQY6Wzb6DwcbkzDfdBomzmI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ピクニックバスケット","description":"お出かけのおともに、お部屋のインテリアに…\n\n蓋にボーンを入れているので、自由な角度で開閉できます。\n\n三角面1100　マテリアル数3\n\n通常価格・お布施用で内容物は変わりません。\n\n\n（注）画像に含まれるお菓子・人型モデルは、本ファイルには含まれていません。あくまで使用例です。","url":"https://booth.pm/ja/items/1045630","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/050eca5c-219c-4153-bbcb-49cb0490bfb5/i/1045630/3285c186-c486-4440-8a27-f417ae994079_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uOYekqFaDuc7T4nKS/zNF8r/o5AtKPtah9bCeoucV4o="></script>
+    nonce="Uq7qXgb0kyrJ3UlC5eTNbQY6Wzb6DwcbkzDfdBomzmI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1045630/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               19
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1045630/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               19
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
