--- a/VRChat/18/1045418.html
+++ b/VRChat/18/1045418.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "lAFNPIdGUeoLXoP6UcabHXJSxetNrR4iUrigOsvKA1E="></script>
+    "RqP3aXOqDKUhFcyb04+HgmKXPJz86vkcLd6ui/PYW40="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Vegas Jackpot【VRChat対応】","description":"フルスクラッチ、シカゴ・タイプライターをモチーフにしたサブマシンガン「Vegas Jackpot」です\n\n同封のパーティクルを設定することで、コインを撃てます\n「弾丸をばらまくのはちょっと……」なアナタに\n弾倉は別オブジェクトなので、外してリロードもできます\n\nポリゴン数：1440△\n(銃身1198+弾倉242)\n\nVRChatでの使用を想定しています\n","url":"https://booth.pm/ja/items/1045418","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b3455261-78a7-4395-ad3c-ee3028c2242e/i/1045418/bf5e19c1-a74a-4181-8449-8eda30debea3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lAFNPIdGUeoLXoP6UcabHXJSxetNrR4iUrigOsvKA1E="></script>
+    nonce="RqP3aXOqDKUhFcyb04+HgmKXPJz86vkcLd6ui/PYW40="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1045418/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1045418/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
