--- a/VRChat/73/1042673.html
+++ b/VRChat/73/1042673.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+oERtJVluN59/FyvSpjq49FZPpHznRUjuUe6SVWyeWo="></script>
+    "SJi/a2yeEDbly/wEc2vTOFx8jwBZpQDFbtU6l27VEs4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボルト【ハロウィン向け】","description":"金属ボルトの3Dモデルです。\nVRChatのアバターの頭に髪飾りとして付けるために作成しました。ハロウィンコスで頭にぶっ刺してご利用ください。\n改変、商用等、自由にご利用いただけます。","url":"https://booth.pm/ja/items/1042673","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/61e4610c-2d48-4d4b-b8e1-76e0985b5de8/i/1042673/62196d54-6917-453c-b0b1-b7f253ae1fa3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+oERtJVluN59/FyvSpjq49FZPpHznRUjuUe6SVWyeWo="></script>
+    nonce="SJi/a2yeEDbly/wEc2vTOFx8jwBZpQDFbtU6l27VEs4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1042673/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               40
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1042673/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               40
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
