--- a/VRChat/63/1042163.html
+++ b/VRChat/63/1042163.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "l9JspHA/K0Gax/mHoa63Gbtx+cH97yGP1Yk3IWTthiQ="></script>
+    "+DrxRDaKfZACvFRwYEv8zR6Bnu+z9UInwbESpkcSXxY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ハロウィンの奴(かぼちゃのお菓子入れ)","description":"・モデル概要\n\n\nハロウィン風のかぼちゃのお菓子入れです。\n\nboneが入っているので同梱の説明を参考に「Dynamic Bone」を設定するといい感じに揺れます。\n\nVRChatにてアバターに仕込むことを想定して作りました。\n\n100円の方も中身は一緒でBOOST用です。\nゆるゆるとよろしくおねがいします。\n\n\n・利用規約\n\n\n・収録されるデータの改変は自由です。\n\n・改変前、改変後を含みこのモデルの販売、再配布を禁止します。\n\n・この商品に収録されるデータの権利は作者に帰属します。\n","url":"https://booth.pm/ja/items/1042163","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/9b8ff489-eb05-4473-b3c0-5d27aad2bde4/i/1042163/f9cba2ce-a701-47c9-b144-227208c6efa7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="l9JspHA/K0Gax/mHoa63Gbtx+cH97yGP1Yk3IWTthiQ="></script>
+    nonce="+DrxRDaKfZACvFRwYEv8zR6Bnu+z9UInwbESpkcSXxY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1042163/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               68
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1042163/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               68
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
