--- a/VRChat/75/1041675.html
+++ b/VRChat/75/1041675.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uJ75Jfu9gjOI1sngPyzgBIzeEsV5QbdT8ye3F20N7Gg="></script>
+    "cfcfPHvH3EpKVylEISxMm9yDZXXHBUZHnJY1YOjHr+w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"試験管、瓶、試験管立て・瓶立て【オリジナル3Dモデル】","description":"試験管立て・瓶立て、試験管、瓶の3Dモデルです。\nunitypakageにはPrefab8種、画像を撮影するために使ったサンプルシーン入り。\n\n・試験管立てと瓶立てを組み合わせ、引き出しを付けた3Dモデル、引き出しは開閉可（△831ポリゴン）\n・試験管1種、液体部分と試験管本体は別々に大きさ設定可（あわせて△158ポリゴン）\n・瓶2種、同じく別々に大きさ設定可（あわせて△254ポリゴン）\n・コルク、別モデルなので取り外し可（△28ポリゴン）\n\n画像の通りに配置すると合計△2325ポリゴンです。\n\nVRChatのアバター、ワールドでの使用を想定して制作しました。\n化学実験室、治療薬の作成、魔法薬の研究や錬金術の工房など、様々な場面で使うことができると思います。\n\n---------------------------------------------------------------\nファイルの中身\n・BinTate.unitypackage\n・BinTate.fbx（△831ポリゴン）\n・BinTate_Shikenkan.fbx（△158ポリゴン）\n・BinTate_Bin1.fbx（△254ポリゴン）\n・BinTate_Bin2.fbx（△254ポリゴン）\n・BinTate_Cork.fbx（△28ポリゴン）\n・テクスチャ18枚\n - 試験管立て・瓶立て本体\n - 引き出し部分\n - 引き出しの持ち手\n - 試験管・瓶本体\n - 試験管・瓶の液体部分\n - コルク\nそれぞれベース部分、ノーマルマップ、メタリックの3種。合計18枚。\n\nテクスチャデータはサイズ2048で制作しました。\n圧縮前のデータをzipに入れてあります。\nファイルサイズが大きいので、unityで使う際に圧縮をしてください。\nunitypackage内のテクスチャは、サイズを1024に設定し圧縮をしてあります。\n\nsampleシーンはunity version 5.6.3p1で制作しました。\n\n改変自由。\n3Dモデルデータとして使える状態での再配布禁止。\nゲーム、映像作品などで使うことができます。商用可。\n誹謗中傷、違法行為、または国防に関する法律に違反する行為への使用を禁止します。","url":"https://booth.pm/ja/items/1041675","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/ba1632d1-d7a2-47bf-b5c7-b1b4c83290fc/i/1041675/1fedc749-e10f-41d6-aed8-3b0df20a8f6f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uJ75Jfu9gjOI1sngPyzgBIzeEsV5QbdT8ye3F20N7Gg="></script>
+    nonce="cfcfPHvH3EpKVylEISxMm9yDZXXHBUZHnJY1YOjHr+w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1041675/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               192
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1041675/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               192
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
