--- a/VRChat/29/1040829.html
+++ b/VRChat/29/1040829.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "oTnG3C8Noo8lymKCilLRYUASmCvmXJLWXq5WimZefU4="></script>
+    "CRZv3uFm8LIEIG46V4k61JVzZLy2Qw1WYH0r+3FH4tk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け武器】ハルバード","description":"MagicaVoxelで作った「ハルバード」です！\n\n基本的にVRChatでの使用を想定しています。\nアバターに持たせて使う大型の武器をイメージして作りました。\n\n【内容物】\n・Halberd.unitypackage\n・モデル(fbx/obj※)\n・Readme.tex\n・導入説明画像.png\n・大きさ調整.png\n※blender向けにobjファイルを同梱しています。\n※voxファイルは同梱しておりません。\n\n【利用規約】\n◇やっていいこと◇\n〇改変可\n〇商用利用※(ここではVtuber等の利益の発生する配信や動画を指す)\n〇パーツ流用可\n〇アバターペデスタルを用いた配布可\n〇VRChat以外のゲーム、アプリ、ソフト等での使用可\n\n◇やってはだめなこと◇\n×再配布\n×本データを無断で有料販売または配布\n\n【導入方法】\nzipファイルを解凍後、UnityPackageをUnity上にドラッグ＆ドロップ、もしくはImportPackageからUnityPackageを直接指定してください。\n\n【お問い合わせ】\nTwitter:@zuihoucha","url":"https://booth.pm/ja/items/1040829","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/da4e30e9-04a4-47e9-a425-ac59c0d6a53d/i/1040829/956003cb-3948-410d-9576-9e0d8650a990_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="oTnG3C8Noo8lymKCilLRYUASmCvmXJLWXq5WimZefU4="></script>
+    nonce="CRZv3uFm8LIEIG46V4k61JVzZLy2Qw1WYH0r+3FH4tk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1040829/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               116
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1040829/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               116
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
