updated at: 2023-04-25 19:30, VRChat向け超ウルトラ高品質あヴぁたー - メイドの手芸屋 - BOOTH

--- a/VRChat/26/1374026.html
+++ b/VRChat/26/1374026.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XkN2oSAOy/mCed0HdegWnN8O+3LbGskhhesZwEvj2cI="></script>
+    "y2sU4Bxhtt06B/eNLF72zJx3iyoAjblreSolp/vMpIU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け超ウルトラ高品質あヴぁたー","description":"ＶＲＣhat向けのはいぱー高品質あヴぁターです！\n高品質なので価格は適正です！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！\n大安売りだよ！！！！！！！！！！！！！！（どっち！！！！）\n\nハイポリゴンメッシュ（△200万）も同梱してるので好きにしてね！！！！！！！！！！！！","url":"https://booth.pm/ja/items/1374026","offers":{"priceCurrency":"JPY","@type":"Offer","price":"9680"},"image":"https://booth.pximg.net/c/620x620/29cbdbe7-d2fb-463e-9d1e-cb8f1e92083e/i/1374026/a68904d3-30b0-4964-9960-dcc89d00e6c6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XkN2oSAOy/mCed0HdegWnN8O+3LbGskhhesZwEvj2cI="></script>
+    nonce="y2sU4Bxhtt06B/eNLF72zJx3iyoAjblreSolp/vMpIU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1374026/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1374026/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
