updated at: 2023-04-25 19:31, VRCodeReader - MINAMI - BOOTH

--- a/VRChat/58/1038758.html
+++ b/VRChat/58/1038758.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Q8Wz3qYqA7m9RUV9dVkPBjbXBImneuwx4PsYpTyQaUs="></script>
+    "m/i785NIE+iXLOiZXIlJeuV5gG10K+qxkvuNQVUH/ik="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCodeReader","description":"VRChatでQRコードのスクリーンショットを撮影するとQRコードを解析するアプリです。解析した文字列をクリップボードにコピーしたりURLをブラウザで開いたりする機能もあります。\n\nQRコードは(株)デンソーウェーブの登録商標です","url":"https://booth.pm/ja/items/1038758","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/de8de267-62ad-45e9-88e3-e15de9a05583/i/1038758/44e17e64-af4c-44f9-a05b-c1dc812826f4_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Q8Wz3qYqA7m9RUV9dVkPBjbXBImneuwx4PsYpTyQaUs="></script>
+    nonce="m/i785NIE+iXLOiZXIlJeuV5gG10K+qxkvuNQVUH/ik="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1038758/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1038758/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
