updated at: 2023-04-25 19:32, 木材屋の仮面 - Masquerade Members Shop - BOOTH

--- a/VRChat/86/1038286.html
+++ b/VRChat/86/1038286.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Q3Gz8jVi62J4C6rxSesicgEWbOQmc7oxw2iPdtfVqao="></script>
+    "xb7ijf1E6wDd8Anvv9ApTPS9E7Ce/sn/G0CeihQ5Oz4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"木材屋の仮面","description":"木材屋の仮面（VRC向け装飾）\n\n内容\n　商品画像\n　fbx\n　texture(color,metal,normal)\n　unitypackage\n　ポリゴン数500\n\n商用利用ok\n改変可\n再配布禁止","url":"https://booth.pm/ja/items/1038286","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e0415562-fcb7-4594-a7f1-147b54a5ca15/i/1038286/d68d0c34-c4b3-4ade-b083-81bae1b20d4e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Q3Gz8jVi62J4C6rxSesicgEWbOQmc7oxw2iPdtfVqao="></script>
+    nonce="xb7ijf1E6wDd8Anvv9ApTPS9E7Ce/sn/G0CeihQ5Oz4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1038286/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1038286/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
