updated at: 2023-04-25 19:32, 剣 - おおみShop - BOOTH

--- a/VRChat/50/1038050.html
+++ b/VRChat/50/1038050.html
@@ -70,9 +70,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5mktwMj2ugNtDp9lwmPMf79iPU76Ckf7msPklFHIhFY="></script>
+    "bEAtBRyw4CUAYi/FtVbjsmAZ3XBCXruOEw6HlEiiZL4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"剣","description":"2266ポリゴン\nfbxのみ","url":"https://booth.pm/ja/items/1038050","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/fbe78718-f68f-42ee-af12-21af884bd699/i/1038050/edf9737b-92c9-40f5-b3cd-98f0c4bc94fd_base_resized.jpg"}
     </script>
@@ -86,7 +86,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5mktwMj2ugNtDp9lwmPMf79iPU76Ckf7msPklFHIhFY="></script>
+    nonce="bEAtBRyw4CUAYi/FtVbjsmAZ3XBCXruOEw6HlEiiZL4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -110,6 +110,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1038050/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               63
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1038050/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               63
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
